--- a/todos-front/tasks.html
+++ b/todos-front/tasks.html
@@ -15,6 +15,7 @@
 </head>
 
 <body id="page-top">
+<div id="welcomeMessage" role="alert"></div>
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="#page-top">Liste des tâches</a>
@@ -36,7 +37,6 @@
     <section class="page-section portfolio" id="portfolio">
         <div class="container">
             <div id="app">
-                <!-- utiliser le javascript pour afficher la liste des tâches ici -->
             </div>
         </div>
     </section>
@@ -45,6 +45,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/stats.js"></script>
+    <script src="js/tasks.js"></script>
 </body>
 
 </html>
