--- a/todos-front/tasks.html
+++ b/todos-front/tasks.html
@@ -36,6 +36,14 @@
     </header>
     <section class="page-section portfolio" id="portfolio">
         <div class="container">
+
+            <div class="card mt-3 p-3">
+                <h2 class="h2">Nouvelle tâche</h2>
+                <form id="form" name="myForm" onsubmit="postNewTask(event)" method="post" class="form-control d-flex justify-content-between">
+                    <input class="border-0 p-1 col-8" type="text" name="task" placeholder="Nouvelle tâche...">
+                    <input class="btn btn-primary col-2" type="submit" value="Ajouter">
+                </form>
+            </div>
             <div id="app">
             </div>
         </div>
