--- a/todos-front/item.html
+++ b/todos-front/item.html
@@ -28,16 +28,12 @@
     </nav>
     <header class="masthead bg-primary text-white text-center">
         <div class="container d-flex align-items-center flex-column">
-            <h1 class="masthead-heading text-uppercase mb-0">
-                <!- Afficher le titre de la tâche ici ->
-            </h1>
+            <h1 class="masthead-heading text-uppercase mb-0"></h1>
         </div>
     </header>
     <section class="page-section portfolio" id="portfolio">
         <div class="container">
-            <div id="app">
-                <!-- utiliser le javascript pour afficher les détails de la tâche -->
-            </div>
+            <div id="app"></div>
         </div>
     </section>
     <div class="copyright py-4 text-center text-white">
