--- a/todos-front/item.html
+++ b/todos-front/item.html
@@ -15,6 +15,7 @@
 </head>
 
 <body id="page-top">
+<div id="welcomeMessage" role="alert"></div>
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand" href="#page-top">Task</a>
@@ -40,6 +41,7 @@
         <div class="container"><small>Copyright &copy; Your Website 2023</small></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/scripts.js"></script>
     <script src="js/item.js"></script>
 </body>
 
