--- a/todos-front/tasks.html
+++ b/todos-front/tasks.html
@@ -38,9 +38,9 @@
         <div class="container">
 
             <div class="card mt-3 p-3">
-                <h2 class="h2">Nouvelle tâche</h2>
+                <h2 class="h2">New task</h2>
                 <form id="form" name="myForm" onsubmit="postNewTask(event)" method="post" class="form-control d-flex justify-content-between">
-                    <input class="border-0 p-1 col-8" type="text" name="task" placeholder="Nouvelle tâche...">
+                    <input class="border-0 p-1 col-8" type="text" name="task" placeholder="Write a new task...">
                     <input class="btn btn-primary col-2" type="submit" value="Ajouter">
                 </form>
             </div>
