--- a/todos-front/tasks.html
+++ b/todos-front/tasks.html
@@ -47,9 +47,10 @@
 
             <div class="card mt-3 p-3">
                 <h2 class="h2">New task</h2>
-                <form id="form" name="myForm" onsubmit="postNewTask(event)" method="post" class="form-control d-flex justify-content-between">
-                    <input class="border-0 p-1 col-8" type="text" name="task" placeholder="Write a new task...">
-                    <input class="btn btn-primary col-2" type="submit" value="Ajouter">
+                <form id="form" name="myForm" onsubmit="postNewTask(event)" method="post" class=" d-flex justify-content-between">
+                    <input type="text" class="border rounded p-1 col-4" name="task" placeholder="Write a new task...">
+                    <input type="text" class="border rounded p-1 col-5" name="tags" placeholder="Write a tags, separate with a coma">
+                    <input class="btn btn-primary col-1" type="submit" value="Add">
                 </form>
             </div>
             <div id="app">
